--- a/src/component/MoviesCovered/MoviesCovered.scss
+++ b/src/component/MoviesCovered/MoviesCovered.scss
@@ -7,9 +7,9 @@
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
       0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    background: rgba(155, 155, 155, 0.482);
-    width: 300px;
-    height: 465px;
+    // background: rgba(155, 155, 155, 0.482);
+    // width: 300px;
+    // height: 465px;
     margin: 20px 0 0 0;
   }
 }
@@ -19,11 +19,11 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    padding: 20px;
+    // padding: 20px;
     .zg-movie {
-      width: 200px;
-      height: 310px;
-      margin: 10px 0 0 0;
+      // width: 200px;
+      // height: 310px;
+      // margin: 10px 0 0 0;
     }
   }
 }
